Fix js info bar layout bug

--- a/src/jsClientMain/resources/public/stylesheets/components/_app.scss
+++ b/src/jsClientMain/resources/public/stylesheets/components/_app.scss
@@ -91,7 +91,7 @@
   .info-bar {
     position: absolute !important;
     right: 0;
-    top: 0;
+    top: 3rem;
     height: calc(100% - 3rem);
     width: calc(100% - 4rem)
   }
